# Dojo-Haskell

./: Dojo.cabal  README.md
app/: Main.hs
src/: Dojo.hs
test/: Spec.hs
