name:                Dojo
version:             0.1.0.0
synopsis:            Base proejct for coding Dojos
description:         Please see README.md
homepage:            https://github.com/RaphMad/Dojo#readme
license:             MIT
license-file:        LICENSE
author:              Raphael Mader
maintainer:          RaphMad@users.noreply.github.com
copyright:           (c) 2016 Raphael Mader
category:            Dojos
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dojo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Dojo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base,
                       Dojo
  default-language:    Haskell2010

test-suite Dojo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       hspec,
                       Dojo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RaphMad/Dojo
